complete the front page with css

--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sudo-dev web design </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/ main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/styling.css" />
 </head>
 
 <body>
     <header>
         <div class="container">
             <div id="branding">
-                <h1>sudo dev design</h1>
+                <h1> <span class="heightlight">sudo</span>  dev design</h1>
             </div>
 
         </div>
         <nav>
             <ul>
-                <li><a href="Home.html">Home</a></li>
+                <li class="current"><a href="Home.html">Home</a></li>
                 <li><a href="Service.html">Service</a></li>
                 <li><a href="about.html">ABout</a></li>
             </ul>
@@ -47,7 +46,7 @@
 
 
 
-    <section id="newsletter ">
+    <section id="newsletter">
         <div class="container">
             <h1>Subscribe to our news latter</h1>
             <form>
@@ -59,6 +58,29 @@
 
     </section>
 
+    <section id="box">
+        <div class="container">
+            <div class="box">
+                <img src="./images/html.png" alt="">
+                <h3>HTML5 markup</h3>
+                <p>html develepment of hight quality </p>
+            </div>
+            <div class="box">
+                <img src="./images/css.png" alt="">
+                <h3>CSS3 styling</h3>
+                <p>html develepment of hight quality </p>
+            </div>
+            <div class="box">
+                <img src="./images/Graphic_Design.jpg" alt="">
+                <h3>Graphic design</h3>
+                <p>html develepment of hight quality </p>
+            </div>
+        </div>
 
+    </section>
 
- 
+<footer>
+    <p> sudo dev web design  Copyright &copy; 2019</p>
+</footer>
+
+</body>
